# triagebot

./: .env  .env.sample  .git-blame-ignore-revs  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  SomeFile.txt  flake.nix  lang-agenda.md  pr_prefs_backoffice.md  rust-lang.triagebot.toml  rust-toolchain  triagebot.toml  whatever.txt
.github/: dependabot.yml
.github/workflows/: automatic-triage.yml  ci.yml
ci/: check-nightly-version.sh  publish-docker.sh  run.sh
github-graphql/: Cargo.toml  PullRequestsOpen.gql  build.rs
github-graphql/src/: lib.rs
parser/: Cargo.toml
parser/src/: code_block.rs  command.rs  error.rs  ignore_block.rs  label.rs  lib.rs  mentions.rs  text.rs  token.rs
parser/src/command/: assign.rs  concern.rs  decision.rs  glacier.rs  label.rs  lock.rs  merge.rs  nominate.rs  note.rs  ping.rs  relabel.rs  second.rs  shortcut.rs  triage.rs
src/: actions.rs  agenda.rs  bors.rs  cache.rs  config.rs  db.rs  errors.rs  gh_changes_since.rs  gh_comments.rs  gh_range_diff.rs  gha_logs.rs  github.rs  handlers.rs  interactions.rs  jobs.rs  lib.rs  logger.rs  main.rs  meeting.rs  notification_listing.rs  payload.rs  permissions.rs  prioritization.rs  registry.rs  rfcbot.rs  team.rs  team_data.rs  test_record.rs  tests.rs  triage.rs  utils.rs  zulip.rs
src/changelogs/: mod.rs  rustc.rs
src/db/: decision_state.rs  events.rs  issue_data.rs  issue_decision_state.rs  jobs.rs  notifications.rs  postgres.rs  review_prefs.rs  rustc_commits.rs  sqlite.rs  users.rs
src/gh_comments/: github-markdown@20260115.css  github-markdown@20260117.css  github-markdown@5.8.1.css  relative-time-element@5.0.0.js  self_contained.js  style.css
src/gh_range_diff/: bidi_unicode.rs
src/gha_logs/: ansi_up@6.0.6.min.js  gha_logs.js
src/github/: client.rs  event.rs  graphql.rs  issue.rs  issue_query.rs  issue_repository.rs  labels.rs  repos.rs  repository.rs  utils.rs  webhook.rs
src/github/queries/: closing_issues_references.rs  cross_references.rs  issue_with_comments.rs  issues_assigned.rs  mod.rs  user_comments_in_org.rs  user_contributions.rs  user_info.rs  user_prs.rs  user_prs_in_org.rs  user_repos.rs
src/github/repos/: issue_with_comments.rs  user_comments_in_org.rs
src/github/webhook/: event.rs
src/handlers/: acknowledgement.rs  assign.rs  autolabel.rs  backport.rs  beta_backport.rs  bot_pull_requests.rs  canonicalize_issue_links.rs  check_commits.rs  close.rs  closed_pr.rs  concern.rs  contribution_guidelines.rs  converted_to_draft.rs  decision.rs  docs_update.rs  events.rs  github_releases.rs  glacier.rs  issue_links.rs  jobs.rs  label.rs  lintcheck_summary.rs  lock.rs  macros.rs  major_change.rs  mentions.rs  merge.rs  merge_conflict.rs  merge_conflicts.rs  milestone_prs.rs  no_mentions.rs  no_merges.rs  nominate.rs  note.rs  notification.rs  notify_zulip.rs  ping.rs  pr_tracking.rs  prioritize.rs  project_goals.rs  (+22 more)
src/handlers/assign/: activity.rs  messages.rs  release_inactive_assignments.rs  tests_candidates.rs  tests_from_diff.rs
src/handlers/check_commits/: behind_upstream.rs  branch_links.rs  force_push_range_diff.rs  issue_links.rs  modified_submodule.rs  no_mentions.rs  no_merges.rs  non_default_branch.rs  validate_config.rs
src/http_client/: mod.rs
src/prioritization/: config.rs  mod.rs
src/tests/: github.rs  mod.rs
src/zulip/: api.rs  client.rs  commands.rs
templates/: _issue.tt  _issue_with_meta.tt  _issues.tt  _issues_fcps.tt  _issues_heading.tt  _issues_rfcbot.tt  _issues_with_meta.tt  agenda.tt  final_review.tt  lang_agenda.tt  lang_planning_agenda.tt  nominations.tt  pr-prefs-backoffice.html  prioritization_agenda.tt  prs_waiting_on_team.tt  regressions.tt  unpri_i_prioritize.tt
templates/triage/: index.html  pulls.html
tests/: testsuite.rs
tests/common/: mod.rs
tests/db/: issue_data.rs  jobs.rs  mod.rs  notification.rs  rustc_commits.rs
tests/github_client/: commits_7632db0e87d8adccc9a83a47795c9411b1455855.json  commits_bors.json  get_reference.json  git_commits_109cccbe4f345c0f0785ce860788580c3e2a29f5.json  git_commits_post.json  is_new_contributor_brson.json  issues.json  merge_upstream.json  mod.rs  new_pr.json  repository_reference.json  repository_rust.json  submodule_get.json  update_reference_patch.json  update_tree_post.json  user.json
tests/github_client/add_assignee/: 02-POST-repos_ehuss_triagebot-test_issues_115_assignees.json  03-GET-repos_ehuss_triagebot-test_pulls_115.json  04-POST-repos_ehuss_triagebot-test_issues_115_assignees.json  05-GET-repos_ehuss_triagebot-test_pulls_115.json  06-POST-repos_ehuss_triagebot-test_issues_115_assignees.json  08-POST-repos_ehuss_triagebot-test_issues_115_assignees.json
tests/github_client/add_labels/: 02-GET-repos_ehuss_triagebot-test_labels_enhancement.json  03-POST-repos_ehuss_triagebot-test_issues_115_labels.json  04-GET-repos_ehuss_triagebot-test_pulls_115.json  05-GET-repos_ehuss_triagebot-test_labels_does-not-exist.json
tests/github_client/bors_commits/: 00-GET-repos_rust-lang_rust_commits.json  00-api-GET-repos_rust-lang_rust_commits.json
tests/github_client/close/: 01-GET-repos_ehuss_triagebot-test_pulls_115.json  02-PATCH-repos_ehuss_triagebot-test_issues_115.json  03-GET-repos_ehuss_triagebot-test_pulls_115.json
tests/github_client/commits/: 02-GET-repos_ehuss_triagebot-test_pulls_115_commits.json  03-GET-repos_ehuss_triagebot-test_pulls_115_commits.json
tests/server_test/: labels_S-blocked.json  labels_S-waiting-on-author.json  labels_S-waiting-on-review.json  mentions.rs  mod.rs  rate_limit.json  shortcut.rs  shortcut_author_comment.json  shortcut_author_get_labels.json  shortcut_author_labels_response.json  shortcut_blocked_comment.json  shortcut_blocked_labels_response.json  shortcut_ready_comment.json  teams.json
utils/compiler-p-high/: Cargo.toml
utils/compiler-p-high/src/: actions.rs  github.rs  lib.rs  main.rs
utils/compiler-p-high/src/github/: client.rs  issue.rs  issue_query.rs  repos.rs  utils.rs
utils/compiler-p-high/templates/: _issue.tt  _issues.tt  p_high_issues.tt
(+189 files in other folders)
