[package]
name = "triagebot"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2024"

[workspace]

[dependencies]
serde_json = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
anyhow = "1"
hex = "0.4"
parser = { path = "parser" }
rust_team_data = { git = "https://github.com/rust-lang/team" }
glob = "0.3.0"
toml = "0.8.20"
axum = "0.8.4"
hyper = { version = "1.6", features = ["server", "http1"] }
tokio = { version = "1", features = ["macros", "time", "rt"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1.31"
uuid = { version = "0.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
postgres-native-tls = "0.5.0"
native-tls = "0.2"
x509-cert = { version = "0.2.5", features = ["pem"] }
serde_path_to_error = "0.1.2"
octocrab = { version = "0.44", features = ["stream"] }
comrak = { version = "0.38", default-features = false }
cynic = "3"
itertools = "0.14.0"
tower = { version = "0.5", features = ["util", "limit", "buffer", "load-shed"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "request-id", "catch-panic"] }
github-graphql = { path = "github-graphql" }
rand = "0.8.5"
ignore = "0.4.18"
postgres-types = { version = "0.2.4", features = ["derive"] }
cron = { version = "0.15.0" }
bytes = "1.1.0"
clap = { version = "4", features = ["derive", "string"] }
hmac = "0.12.1"
subtle = "2.6.1"
sha2 = "0.10.9"
imara-diff = "0.2.0"
pulldown-cmark-escape = "0.11.0"
axum-extra = { version = "0.10.1", default-features = false }

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tera]
version = "1.3.1"
default-features = false

[dev-dependencies]
bon = "3"

[profile.release]
debug = 2
