[package]
name = "parser"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2021"

[dependencies]
pulldown-cmark = "0.7.0"
log = "0.4"
regex = "1.6.0"
postgres-types = { version = "0.2.4", features = ["derive"] }

[dependencies.serde]
version = "1"
features = ["derive"]
