[package]
name = "compiler-p-high"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.45", default-features = false, features = ["serde"] }
dotenvy = "0.15.7"
tera = { version = "1.20.1", default-features = false, features = ["builtins"] }
tokio = { version = "1.52.3", default-features = false, features = ["macros", "time", "rt"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter"] }
triagebot = { path = "../../" }
