[package]
name = "compiler-p-high"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.31"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
octocrab = { version = "0.44" }
tera = { version = "1.3.1", default-features = false, features = ["builtins"] }
tokio = { version = "1", default-features = false, features = ["macros", "time", "rt"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

# Rust team data and its deps
rust_team_data = { git = "https://github.com/rust-lang/team" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", default-features = false, features = ["derive"] }
tracing = "0.1"

# github.rs and its deps
serde_json = "1"
regex = "1"
bytes = "1.10.1"
itertools = "0.14.0"
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
http = "1.4.0"
http-body-util = "0.1.3"
futures = { version = "0.3", default-features = false, features = ["std"] }
url = "2.1.0"
